--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -1,8 +1,3 @@
-.dashboard {
-  display: grid;
-  grid-template-rows: 100px;
-}
-
 .dashboard__left {
   position: relative;
   transition: 0.3s;
@@ -10,14 +5,25 @@
 
 .dashboard__left .fixed {
   height: 100vh;
-  position: relative;
+  position: fixed;
   padding: 20px;
-
   background-color: #fff;
 }
 
-.dashboard__left.hide {
-  transform: translateX(-300px);
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.3;
+}
+.overlay.hide {
+  transform: translateX(-100%);
+}
+.overlay.show {
+  transform: translateX(0);
 }
 
 .dashboard__left h1 {
@@ -70,6 +76,14 @@
     transform: translateX(-300px);
   }
 }
+.close-btn {
+  text-align: center;
+  margin-top: 40px;
+}
+.close-btn img {
+  width: 40px;
+  height: 40px;
+}
 .dashboard__right {
   width: 100%;
   display: flex;
@@ -79,4 +93,12 @@
   padding: 20px;
   height: fit-content;
   transition: all 0.4s;
+}
+@media (max-width: 768px) {
+  .dashboard__right h1 {
+    font-size: 20px;
+  }
+  .dashboard__right .dashboard-toggle {
+    font-size: 20px !important;
+  }
 }
